# wqh_robot

./: CONTROL_DIAGRAM.md  MPC_IMPLEMENTATION.md  MPC_SETUP.md  PACKAGES.md  README.md  mpc_realize.m  mpc_realize.py  todo.md
mpc_expriments/: mpc_liner_test.py  mpc_mix.py  mpc_realize.py  mpc_s_test.py  mpc_slip.py
mpc_expriments/docs/: 操作说明.m
src/axioma_bringup/: package.xml
src/axioma_bringup/launch/: navigation_bringup.launch.py  slam_bringup.launch.py
src/axioma_description/: CMakeLists.txt  package.xml
src/axioma_description/launch/: display.launch.py
src/axioma_description/urdf/: axioma.urdf
src/axioma_gazebo/: package.xml  setup.py
src/axioma_gazebo/launch/: simulation.launch.py
src/axioma_gazebo/models/axioma_v2/: model.sdf
src/axioma_mpc_controller/: CMakeLists.txt  mpc_controller_plugin.xml  package.xml
src/axioma_mpc_controller/include/axioma_mpc_controller/: mpc_controller.hpp  mpc_controller_plugin.hpp  path_handler.hpp  robot_model.hpp
src/axioma_mpc_controller/src/: mpc_controller.cpp  mpc_controller_plugin.cpp  path_handler.cpp  robot_model.cpp
src/axioma_navigation/: CMakeLists.txt  package.xml
src/axioma_navigation/config/: nav2_params.yaml
src/axioma_slam/: package.xml  setup.py
src/axioma_slam/launch/: save_map.launch.py  slam.launch.py
src/axioma_slam/rviz/: slam.rviz
src/axioma_teleop_gui/: package.xml
